Ajout des endpoints CDC (childAlert, fire, flood, personInfo, communityEmail) et CRUD (person, firestation, medicalRecord)