@@ -1,15 +1,14 @@
 package com.openclassrooms.safetynet.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
 import com.openclassrooms.safetynet.model.Firestation;
 import com.openclassrooms.safetynet.model.Person;
 import com.openclassrooms.safetynet.record.FirestationResponse;
-import com.openclassrooms.safetynet.record.PersonResponse;
 import com.openclassrooms.safetynet.util.AgeCalculator;
+import com.openclassrooms.safetynet.record.PersonResponse;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -22,10 +21,15 @@ public class FirestationService {
     private final DataService dataService;
 
     public FirestationResponse getPersonsByStation(int stationNumber) {
-        log.debug("Getting persons for station {}", stationNumber);
-
         List<String> addresses = dataService.getFirestations().stream()
-                .filter(s -> Integer.parseInt(s.station()) == stationNumber)
+        		.filter(s -> {
+        		    try {
+        		        return Integer.parseInt(s.station()) == stationNumber;
+        		    } catch (NumberFormatException e) {
+        		        log.warn("Invalid station number format: {}", s.station());
+        		        return false;
+        		    }
+        		})
                 .map(Firestation::address)
                 .toList();
 
@@ -34,24 +38,61 @@ public class FirestationService {
                 .toList();
 
         List<PersonResponse> persons = coveredPersons.stream()
-                .map(p -> new PersonResponse(p.firstName(), p.lastName(), p.address(), p.phone()))
-                .collect(Collectors.toList());
+                .map(p -> new PersonResponse(
+                        p.firstName(), p.lastName(), p.address(), p.phone()))
+                .toList();
 
         int adultCount = (int) coveredPersons.stream()
-                .filter(p -> {
-                    int age = AgeCalculator.calculateAge(
-                            dataService.getMedicalRecords().stream()
-                                    .filter(m -> m.firstName().equals(p.firstName()) &&
-                                                 m.lastName().equals(p.lastName()))
-                                    .findFirst()
-                                    .map(m -> m.birthdate())
-                                    .orElse("01/01/1900")
-                    );
-                    return age > 18;
-                }).count();
+                .filter(p -> AgeCalculator.calculateAge(
+                        dataService.getMedicalRecords().stream()
+                                .filter(m -> m.firstName().equals(p.firstName()) &&
+                                             m.lastName().equals(p.lastName()))
+                                .findFirst()
+                                .map(m -> m.birthdate())
+                                .orElse("01/01/1900")) > 18)
+                .count();
 
         int childCount = coveredPersons.size() - adultCount;
 
         return new FirestationResponse(persons, adultCount, childCount);
+    }
+    
+    public boolean addMapping(Firestation firestation) {
+        boolean exists = dataService.getFirestations().stream()
+            .anyMatch(f -> f.address().equals(firestation.address()) &&
+                           f.station().equals(firestation.station()));
+        if (exists) {
+        	log.warn("Mapping already exists: {}", firestation);
+        	return false;
+        }
+        dataService.getFirestations().add(firestation);
+        log.info("Mapping added: {}", firestation);
+        return true;
+    }
+    
+
+    public boolean updateMapping(Firestation firestation) {
+        boolean removed = dataService.getFirestations().removeIf(f ->
+            f.address().equals(firestation.address()) && f.station().equals(firestation.station())
+        );
+        if (removed) {
+            dataService.getFirestations().add(firestation);
+            log.info("Mapping updated: {}", firestation);
+        } else {
+            log.warn("Mapping not found: {}", firestation);
+        }
+        return removed;
+    }
+
+    public boolean deleteMapping(String address, String station) {
+        boolean deleted = dataService.getFirestations().removeIf(f ->
+            f.address().equals(address) && f.station().equals(station)
+        );
+        if (deleted) {
+            log.info("Mapping deleted for address {} station {}", address, station);
+        } else {
+            log.warn("Mapping not found for address {} station {}", address, station);
+        }
+        return deleted;
     }
 }
